# mcp-crew-ai

./: .gitignore  README.md  pyproject.toml
examples/: agents.yml  tasks.yml
src/mcp_crew_ai/: __main__.py  cli.py  server.py  server_cmd.py
