[project]
name = "mcp-crew-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adam.paterson", email = "hello@adampaterson.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
